# app/Models/CentroAcopio.php
@@ -33,8 +33,8 @@ class CentroAcopio extends Model
         return $this->belongsTo(Estado::class, 'estado_id');
     }
 
-    public function ciudad() : BelongsTo {
-        return $this->belongsTo(Ciudad::class, 'ciudad_id');
+    public function municipio() : BelongsTo {
+        return $this->belongsTo(Municipio::class, 'municipio_id');
     }
 
     public function raees() : HasMany {
@@ -48,8 +48,8 @@ class CentroAcopio extends Model
     public function scopeFilterLocation($query, $filters) {
         $query->when($filters['estado_id'] ?? null, function($query, $estadoID) {
             $query->where('estado_id', $estadoID);
-        })->when($filters['ciudad_id'] ?? null, function($query, $ciudadID) {
-            $query->where('ciudad_id', $ciudadID);
+        })->when($filters['municipio_id'] ?? null, function($query, $municipioID) {
+            $query->where('municipio_id', $municipioID);
         })->where('active', true);
     }
 }
